2023-11-11 Felix Salfelder <felix AT salfelder.org>

	* Makefile.in:
	  Fix Ticket #193

2023-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  doc/sdccman.lyx,
	  src/mcs51/gen.c,
	  src/mcs51/main.c:
	  Remove --parms-in-bank1 support in mcs51 port.

2023-11-00 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Rectify dummy prototype. Fixes bug #3654.

2023-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCmain.c:
	  Fix --std-c2x.
	* src/SDCCralloc.hpp:
	  Fix an UB issue in register allocation affecting z80 (and related).
	* src/mcs51/ralloc.h,
	  src/mcs51/ralloc.c:
	  Destroy the xreg relics.

2023-11-08 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/diagnostic-color.cc,
	  support/cpp/gcc/prefix.cc:
	  attempt to fix bug #3669, cf
	  https://gcc.gnu.org/pipermail/gcc-patches/2023-January/609526.html

2023-11-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  device/lib/Makefile.in,
	  device/lib/ckd_add.c,
	  device/lib/ckd_mul.c,
	  device/lib/ckd_sub.c,
	  device/lib/*/Makefile.in,
	  doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCval.c,
	  support/regression/tests/assert.c,
	  support/regression/tests/auto.c,
	  support/regression/tests/bitcount.c.in,
	  support/regression/tests/bitcountleading.c.in,
	  support/regression/tests/bitcounttrailing.c.in,
	  support/regression/tests/bitfirst.c.in,
	  support/regression/tests/bitfirstleading.c.in,
	  support/regression/tests/bitwidth.c.in,
	  support/regression/tests/c2xkeywords.c,
	  support/regression/tests/checkedint.c.in,
	  support/regression/tests/digit_separators.c,
	  support/regression/tests/memalignment.c.in,
	  support/regression/tests/typeof.c,
	  support/regression/tests/unreachable.c,
	  support/valdiag/tests/enum.c,
	  support/valdiag/tests/static_assert.c,
	  support/valdiag/tests/struct.c: