@@ -3432,6 +3432,9 @@ mcs51_assignRegisters (ebbIndex * ebbi)
   /* now get back the chain */
   ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbs, count));
 
+  /* Redo generalized constant propagation */
+  recomputeValinfos (ic, ebbi, "_2");
+
   gen51Code (ic);
 
   /* free up any _G.stackSpil locations allocated */
