@@ -1,3 +1,11 @@
+2023-11-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/gen.c,
+	  src/mcs51/gen.h,
+	  src/mcs51/main.c,
+	  src/mcs51/ralloc.c:
+	  Minor mcs51 refactoring.
+
 2023-11-11 Felix Salfelder <felix AT salfelder.org>
 
 	* Makefile.in:
